# fairino-python-sdk

./: pyproject.toml
linux/fairino/: __init__.py
src/fairino/: Robot.py  __init__.py
